<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="userName">User Name:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signin">Sign in</string>
    <string name="registerer">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Family Map</string>
    <string name="filterMenu">Filter</string>
    <string name="searchMenu">Search</string>
    <string name="settingsMenu">Settings</string>
    <string name="default1">Click on a marker to</string>
    <string name="default2">see event details</string>
</resources>
